# Token-Manipulation-Smart-Contract

./: Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json
src/token-flow-backend/: Cargo.toml  token-flow-backend.did
src/token-flow-backend/src/: lib.rs  profile_creation.rs  stable.rs
src/token-flow-frontend/: package.json
src/token-flow-frontend/src/: App.jsx
