[package]
name = "token-flow-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.8"
ic-stable-structures = "0.6.5"
rand = "0.8.5"
lazy_static = "1.4" 
getrandom = { version = "0.2.15", features = ["js"] }
